# ML-All-In-One

./: .env.example  .gitignore  CONSTITUTION.md  Dockerfile  HARNESS_REVIEW.md  Makefile  PROGRESS.md  PROJECT_REVIEW.md  README.md  SKILL.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  run_example.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docker.yml  minimal-test.yml  test-debug.yml  test.yml
api/: __init__.py  auth.py  database.py  main.py  requirements.txt
api/middleware/: logging_middleware.py
api/routes/: __init__.py  admin.py  auth.py  automl.py  data.py  drift.py  experiments.py  explain.py  forecast.py  logs.py  model_registry.py  models.py  monitor.py  pipelines.py  platform_logs.py  preprocessing.py  scheduler.py  train.py  viz.py
api/services/: __init__.py  log_aggregator.py  monitor_service.py
docs/: preprocessing_guide.md  test_report.md
docs/design/: model_training.md  preprocessing.md
docs/research/: README.md  preprocessing_research.md
examples/: credit_fraud.py  example_auth.py  example_continuous_learning.py  experiment_comparison.py  inference_server.py  realtime_logging.py  train_pytorch.py  train_sklearn.py
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  screenshot.mjs  screenshot_training.mjs  tailwind.config.js  vite.config.ts
frontend/e2e/: global-setup.ts
frontend/e2e/tests/: admin_users.spec.ts  auth.spec.ts  automl.spec.ts  data_upload.spec.ts  data_visualization.spec.ts  experiments.spec.ts  inference.spec.ts  logs.spec.ts  model_registry.spec.ts  monitor.spec.ts  scheduler.spec.ts  train.spec.ts  training.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: admin.ts  auth.ts  automl.ts  client.ts  data.ts  drift.ts  experiments.ts  explain.ts  forecastApi.ts  index.ts  logs.ts  models.ts  monitor.ts  pipelines.ts  platform_logs.ts  preprocessing.ts  scheduler.ts  train.ts  viz.ts
frontend/src/components/: Badge.tsx  (+9 more)
harness/designs/: 01_frontend_design.md  02_auth_ui_design.md  03_dataviz_ui_design.md  04_training_curve_ui_design.md  05_automl_ui_design.md  06_data_management_ui_design.md  07_experiment_comparison_ui_design.md  08_training_curves_ui_design.md  09_system_monitor_ui_design.md  preprocessing_tab_ui_design.md
harness/memory/: 01_requirements.md  02_ui_design.md  03_test_report.md  04_audit_report.md  05_final_report.md  06_data_management_requirements.md  07_experiment_comparison_requirements.md  08_training_curves_requirements.md  09_auth_tests_requirements.md  09_bugfix_002_requirements.md  09_experiment_comparison_qa_report.md  09_training_curves_qa_report.md  11_api_requirements.md  12_test_report_v2.md  13_audit_report_v2.md  14_final_report_v2.md  15_dataviz_requirements.md  16_cicd_requirements.md  17_perf_requirements.md  18_automl_requirements.md  19_system_monitor_requirements.md  20_system_monitor_development.md  21_system_monitor_qa_report.md  22_system_monitor_audit_report.md  XX_data_management_final_report.md  XX_experiment_comparison_audit_report.md  XX_experiment_comparison_final_report.md  XX_experiment_comparison_final_report_v2.md  XX_experiment_comparison_qa_report.md  XX_training_curves_audit_report.md  XX_training_curves_final_report.md  preprocessing_tab_requirements.md
scripts/: seed_e2e_inference_data.py
specs/data_management/: constitution_check.md  data-model.md  plan.md  quickstart.md  research.md  spec.md
src/: __init__.py
src/mlkit/: __init__.py
tests/: __init__.py  conftest.py  test_admin_seed.py  test_admin_seed_api.py  test_admin_users_api.py  test_api_automl.py  test_api_models.py  test_api_viz.py  test_auth_api.py  test_automl.py  test_automl_full.py  test_data.py  test_data_authenticity.py  test_data_dataloader_lda.py  test_data_management_api.py  test_drift.py  test_experiments_api.py  test_explain.py  test_forecast.py  test_hooks.py  test_hooks_perf.py  test_iris_inference.py  test_logs_api.py  test_model.py  test_model_registry_api.py  test_models_training.py  test_monitor_api.py  test_pipeline.py  test_preprocessing_api.py  test_preprocessing_base.py  test_preprocessing_encoder.py  test_preprocessing_imputer.py  test_preprocessing_new_features.py  test_preprocessing_pipeline.py  test_preprocessing_scaler.py  test_scheduler.py  test_train_api.py  test_training_curves_api.py  test_untested_models.py
uploads/2/: 20260410_014952_test.csv
(+100 files in other folders)
